--- a/Movie_App/Movie_App/Scenes/Home/HomeMovieCollectionViewCell/HomeMovieCollectionViewCell.xib
+++ b/Movie_App/Movie_App/Scenes/Home/HomeMovieCollectionViewCell/HomeMovieCollectionViewCell.xib
@@ -64,18 +64,24 @@
                                         </constraints>
                                     </view>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PRE-SALE" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1oy-aX-3f2">
-                                        <rect key="frame" x="15" y="15" width="60" height="18"/>
-                                        <color key="backgroundColor" red="0.65835759714469722" green="0.70333454093316172" blue="0.086021249284385287" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <rect key="frame" x="15" y="15" width="70" height="22"/>
+                                        <color key="backgroundColor" red="0.6588235294117647" green="0.70196078431372544" blue="0.086274509803921567" alpha="0.80334739963503654" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="18" id="3XA-pP-yL3"/>
-                                            <constraint firstAttribute="width" constant="60" id="Arl-sT-jOW"/>
+                                            <constraint firstAttribute="height" constant="22" id="3XA-pP-yL3"/>
+                                            <constraint firstAttribute="width" constant="70" id="Arl-sT-jOW"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="8"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                         <userDefinedRuntimeAttributes>
                                             <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                                <real key="value" value="9"/>
+                                                <real key="value" value="11"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                                <real key="value" value="0.10000000000000001"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                                                <color key="value" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
                                     </label>
